--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
        GLOBAL STYLES
     ====================== */
     * {
-      margin: 10px;
-      padding: 0;
+      margin: 0;
+      padding: 10px;
       box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
     }
